--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Redmine\com.dkhalife.apps.csproj">
+    <ProjectReference Include="..\Redmine\Redmine.csproj">
       <Project>{67F9D3A8-F71E-4428-913F-C37AE82CDB24}</Project>
-      <Name>com.dkhalife.apps</Name>
+      <Name>Redmine</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
