refs #1490 Page title is now strongly binded

--- a/Redmine.UWP/Redmine.UWP.csproj
+++ b/Redmine.UWP/Redmine.UWP.csproj
@@ -113,6 +113,7 @@
     <Compile Include="MyPage.xaml.cs">
       <DependentUpon>MyPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PageAttribute.cs" />
     <Compile Include="ProjectsPage.xaml.cs">
       <DependentUpon>ProjectsPage.xaml</DependentUpon>
     </Compile>
