Moving to named type

--- a/Redmine/Redmine.csproj
+++ b/Redmine/Redmine.csproj
@@ -46,7 +46,9 @@
     <Compile Include="com\dkhalife\apps\redmine\api\Users.cs" />
     <Compile Include="com\dkhalife\apps\redmine\core\Progress.cs" />
     <Compile Include="com\dkhalife\apps\redmine\core\RedmineApi.cs" />
+    <Compile Include="com\dkhalife\apps\redmine\ObservableDictionary.cs" />
     <Compile Include="com\dkhalife\apps\redmine\RedmineSettings.cs" />
+    <Compile Include="com\dkhalife\apps\redmine\core\INamedType.cs" />
     <Compile Include="com\dkhalife\apps\redmine\TimeEntryActivity.cs" />
     <Compile Include="com\dkhalife\apps\redmine\Issue.cs" />
     <Compile Include="com\dkhalife\apps\redmine\IssuePriority.cs" />
